--- a/helpers/default-wordpress-htaccess.conf
+++ b/helpers/default-wordpress-htaccess.conf
@@ -17,8 +17,8 @@ php_value max_execution_time 200
 php_value max_input_time 1000
 
 RewriteEngine On
-RewriteBase /fadboilerplate/
+RewriteBase /challenge/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /fadboilerplate/index.php [L]
+RewriteRule . /challenge/index.php [L]
