--- a/helpers/movefile.yml
+++ b/helpers/movefile.yml
@@ -3,28 +3,28 @@ global:
   sql_adapter: "wpcli"
 
 local:
-  vhost: "http://fad.local/fadboilerplate"
-  wordpress_path: "/var/www/public/fadboilerplate" # use an absolute path here
+  vhost: "http://fad.local/challenge"
+  wordpress_path: "/var/www/public/challenge" # use an absolute path here
 
   database:
-    name: "fadboilerplate"
-    user: "fadboilerplate"
-    password: "fadboilerplate"
+    name: "challenge"
+    user: "challenge"
+    password: "challenge"
     host: "localhost"
-    mysqldump_options: "--add-drop-table --ignore-table=fadboilerplate.wp_wfVulnScanners --ignore-table=fadboilerplate.wp_wfThrottleLog --ignore-table=fadboilerplate.wp_wfStatus --ignore-table=fadboilerplate.wp_wfSNIPCache --ignore-table=fadboilerplate.wp_wfScanners --ignore-table=fadboilerplate.wp_wfReverseCache --ignore-table=fadboilerplate.wp_wfNet404s --ignore-table=fadboilerplate.wp_wfLogins --ignore-table=fadboilerplate.wp_wfLocs --ignore-table=fadboilerplate.wp_wfLockedOut --ignore-table=fadboilerplate.wp_wfLeechers --ignore-table=fadboilerplate.wp_wfKnownFileList --ignore-table=fadboilerplate.wp_wfIssues --ignore-table=fadboilerplate.wp_wfHoover --ignore-table=fadboilerplate.wp_wfHits --ignore-table=fadboilerplate.wp_wfFileMods --ignore-table=fadboilerplate.wp_wfCrawlers --ignore-table=fadboilerplate.wp_wfConfig --ignore-table=fadboilerplate.wp_wfBlocksAdv --ignore-table=fadboilerplate.wp_wfBlocks --ignore-table=fadboilerplate.wp_wfBlockedIPLog --ignore-table=fadboilerplate.wp_wfBadLeechers"
+    mysqldump_options: "--add-drop-table --ignore-table=challenge.wp_wfVulnScanners --ignore-table=challenge.wp_wfThrottleLog --ignore-table=challenge.wp_wfStatus --ignore-table=challenge.wp_wfSNIPCache --ignore-table=challenge.wp_wfScanners --ignore-table=challenge.wp_wfReverseCache --ignore-table=challenge.wp_wfNet404s --ignore-table=challenge.wp_wfLogins --ignore-table=challenge.wp_wfLocs --ignore-table=challenge.wp_wfLockedOut --ignore-table=challenge.wp_wfLeechers --ignore-table=challenge.wp_wfKnownFileList --ignore-table=challenge.wp_wfIssues --ignore-table=challenge.wp_wfHoover --ignore-table=challenge.wp_wfHits --ignore-table=challenge.wp_wfFileMods --ignore-table=challenge.wp_wfCrawlers --ignore-table=challenge.wp_wfConfig --ignore-table=challenge.wp_wfBlocksAdv --ignore-table=challenge.wp_wfBlocks --ignore-table=challenge.wp_wfBlockedIPLog --ignore-table=challenge.wp_wfBadLeechers"
 
 boilerplate:
-  vhost: "http://firstascentstaging.com/fadboilerplate"
-  wordpress_path: "/var/www/firstascentstaging.com/public_html/fadboilerplate" # use an absolute path here
+  vhost: "http://firstascentstaging.com/challenge"
+  wordpress_path: "/var/www/firstascentstaging.com/public_html/challenge" # use an absolute path here
 
   database:
-    name: "fadboilerplate"
-    user: "fadboilerplate"
-    password: "fadboilerplate"
+    name: "challenge"
+    user: "challenge"
+    password: "challenge"
     host: "localhost"
     # port: "3308" # Use just in case you have exotic server config
     # mysqldump_options: "--max_allowed_packet=1G" # Only available if using SSH
-    mysqldump_options: "--add-drop-table --ignore-table=fadboilerplate.wp_wfVulnScanners --ignore-table=fadboilerplate.wp_wfThrottleLog --ignore-table=fadboilerplate.wp_wfStatus --ignore-table=fadboilerplate.wp_wfSNIPCache --ignore-table=fadboilerplate.wp_wfScanners --ignore-table=fadboilerplate.wp_wfReverseCache --ignore-table=fadboilerplate.wp_wfNet404s --ignore-table=fadboilerplate.wp_wfLogins --ignore-table=fadboilerplate.wp_wfLocs --ignore-table=fadboilerplate.wp_wfLockedOut --ignore-table=fadboilerplate.wp_wfLeechers --ignore-table=fadboilerplate.wp_wfKnownFileList --ignore-table=fadboilerplate.wp_wfIssues --ignore-table=fadboilerplate.wp_wfHoover --ignore-table=fadboilerplate.wp_wfHits --ignore-table=fadboilerplate.wp_wfFileMods --ignore-table=fadboilerplate.wp_wfCrawlers --ignore-table=fadboilerplate.wp_wfConfig --ignore-table=fadboilerplate.wp_wfBlocksAdv --ignore-table=fadboilerplate.wp_wfBlocks --ignore-table=fadboilerplate.wp_wfBlockedIPLog --ignore-table=fadboilerplate.wp_wfBadLeechers"
+    mysqldump_options: "--add-drop-table --ignore-table=challenge.wp_wfVulnScanners --ignore-table=challenge.wp_wfThrottleLog --ignore-table=challenge.wp_wfStatus --ignore-table=challenge.wp_wfSNIPCache --ignore-table=challenge.wp_wfScanners --ignore-table=challenge.wp_wfReverseCache --ignore-table=challenge.wp_wfNet404s --ignore-table=challenge.wp_wfLogins --ignore-table=challenge.wp_wfLocs --ignore-table=challenge.wp_wfLockedOut --ignore-table=challenge.wp_wfLeechers --ignore-table=challenge.wp_wfKnownFileList --ignore-table=challenge.wp_wfIssues --ignore-table=challenge.wp_wfHoover --ignore-table=challenge.wp_wfHits --ignore-table=challenge.wp_wfFileMods --ignore-table=challenge.wp_wfCrawlers --ignore-table=challenge.wp_wfConfig --ignore-table=challenge.wp_wfBlocksAdv --ignore-table=challenge.wp_wfBlocks --ignore-table=challenge.wp_wfBlockedIPLog --ignore-table=challenge.wp_wfBadLeechers"
 
   exclude:
     - ".tags"
@@ -56,17 +56,17 @@ boilerplate:
     rsync_options: "--no-perms --no-owner --no-group --no-times --checksum"
 
 staging:
-  vhost: "http://firstascentstaging.com/fadboilerplate"
-  wordpress_path: "/var/www/firstascentstaging.com/public_html/fadboilerplate" # use an absolute path here
+  vhost: "http://firstascentstaging.com/challenge"
+  wordpress_path: "/var/www/firstascentstaging.com/public_html/challenge" # use an absolute path here
 
   database:
-    name: "fadboilerplate"
-    user: "fadboilerplate"
-    password: "fadboilerplate"
+    name: "challenge"
+    user: "challenge"
+    password: "challenge"
     host: "localhost"
     # port: "3308" # Use just in case you have exotic server config
     # mysqldump_options: "--max_allowed_packet=1G" # Only available if using SSH
-    mysqldump_options: "--add-drop-table --ignore-table=fadboilerplate.wp_wfVulnScanners --ignore-table=fadboilerplate.wp_wfThrottleLog --ignore-table=fadboilerplate.wp_wfStatus --ignore-table=fadboilerplate.wp_wfSNIPCache --ignore-table=fadboilerplate.wp_wfScanners --ignore-table=fadboilerplate.wp_wfReverseCache --ignore-table=fadboilerplate.wp_wfNet404s --ignore-table=fadboilerplate.wp_wfLogins --ignore-table=fadboilerplate.wp_wfLocs --ignore-table=fadboilerplate.wp_wfLockedOut --ignore-table=fadboilerplate.wp_wfLeechers --ignore-table=fadboilerplate.wp_wfKnownFileList --ignore-table=fadboilerplate.wp_wfIssues --ignore-table=fadboilerplate.wp_wfHoover --ignore-table=fadboilerplate.wp_wfHits --ignore-table=fadboilerplate.wp_wfFileMods --ignore-table=fadboilerplate.wp_wfCrawlers --ignore-table=fadboilerplate.wp_wfConfig --ignore-table=fadboilerplate.wp_wfBlocksAdv --ignore-table=fadboilerplate.wp_wfBlocks --ignore-table=fadboilerplate.wp_wfBlockedIPLog --ignore-table=fadboilerplate.wp_wfBadLeechers"
+    mysqldump_options: "--add-drop-table --ignore-table=challenge.wp_wfVulnScanners --ignore-table=challenge.wp_wfThrottleLog --ignore-table=challenge.wp_wfStatus --ignore-table=challenge.wp_wfSNIPCache --ignore-table=challenge.wp_wfScanners --ignore-table=challenge.wp_wfReverseCache --ignore-table=challenge.wp_wfNet404s --ignore-table=challenge.wp_wfLogins --ignore-table=challenge.wp_wfLocs --ignore-table=challenge.wp_wfLockedOut --ignore-table=challenge.wp_wfLeechers --ignore-table=challenge.wp_wfKnownFileList --ignore-table=challenge.wp_wfIssues --ignore-table=challenge.wp_wfHoover --ignore-table=challenge.wp_wfHits --ignore-table=challenge.wp_wfFileMods --ignore-table=challenge.wp_wfCrawlers --ignore-table=challenge.wp_wfConfig --ignore-table=challenge.wp_wfBlocksAdv --ignore-table=challenge.wp_wfBlocks --ignore-table=challenge.wp_wfBlockedIPLog --ignore-table=challenge.wp_wfBadLeechers"
 
   exclude:
     - ".tags"
@@ -92,7 +92,7 @@ staging:
     - "wp-content/object-cache.php"
     - "wp-content/cache/"
     #hide the theme if handling via git
-    - "wp-content/themes/fadboilerplate/"
+    - "wp-content/themes/challenge/"
     #hide development plugins
     - "wp-content/plugins/simply-show-hooks/"
     - "wp-content/plugins/show-current-template/"
